fix rich text spacing

--- a/assets/pcss/components/rich-text.pcss
+++ b/assets/pcss/components/rich-text.pcss
@@ -63,9 +63,9 @@
     }
   }
 
-  a {
-    @apply relative inline-block;
-  }
+  /* a {
+    @apply rel;
+  } */
 }
 
 /* inverse styles */
@@ -111,7 +111,7 @@
     }
   }
 
-  a {
+  /* a {
     @apply relative inline-block;
-  }
+  } */
 }
